Fix masonry, fix sticky panel, sort by date

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -3,6 +3,7 @@
 
 	--color-text: #cccccc;
 	--color-background: black;
+	--color-blog-collapse-color: black;
 
 	--z-index-blog: 40;
 	--z-index-sticky: 50;
