Use radix-ui for slider

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,7 +1,7 @@
 @theme {
 	--font-Inter: 'Inter', sans-serif;
 
-	--color-text: #cccccc;
+	--color-text: #ccc;
 	--color-background: black;
 	--color-blog-collapse-color: black;
 
