--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,7 @@
 
 @layer theme, base, components, utilities;
 @import './theme.css' layer(theme);
+@import './components/slider.css' layer(components);
 
 @layer base {
 	* {
