--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,7 @@
 @layer theme, base, components, utilities;
 @import './theme.css' layer(theme);
 @import './components/slider.css' layer(components);
+@import './components/switch.css' layer(components);
 
 @layer base {
 	* {
