--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,7 @@
 @import './theme.css' layer(theme);
 @import './components/slider.css' layer(components);
 @import './components/switch.css' layer(components);
+@import './components/tooltip.css' layer(components);
 
 @layer base {
 	* {
