--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -8,6 +8,8 @@
 	--color-popover-background: #222;
 	--color-counter: #a11;
 	--color-blog-post-summary: #888;
+	--color-tooltip-bg: #ddd;
+	--color-tooltip-text: #222;
 
 	--z-index-blog: 40;
 	--z-index-sticky: 50;
