--- a/src/styles/components/switch.css
+++ b/src/styles/components/switch.css
@@ -1,7 +1,7 @@
 .SwitchRoot {
-	@apply data-[state=checked]:bg-text relative h-6 w-11 cursor-pointer rounded-full bg-black transition-colors;
+	@apply data-[state=checked]:bg-switch-checked-bg bg-switch-bg relative h-6 w-11 cursor-pointer rounded-full transition-colors;
 }
 
 .SwitchThumb {
-	@apply bg-text block h-[20px] w-[20px] translate-x-0.5 rounded-full transition-transform will-change-transform data-[state=checked]:translate-x-[22px] data-[state=checked]:bg-black;
+	@apply bg-switch-thumb data-[state=checked]:bg-switch-checked-thumb block h-[20px] w-[20px] translate-x-0.5 rounded-full transition-transform will-change-transform data-[state=checked]:translate-x-[22px];
 }
