--- a/src/styles/components/slider.css
+++ b/src/styles/components/slider.css
@@ -11,7 +11,7 @@
 }
 
 .SliderThumb {
-	@apply bg-text block h-5 w-5 rounded-[10px];
+	@apply bg-text block size-5 rounded-[10px];
 }
 
 .SliderThumb:hover {
