--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,7 @@
 
 @layer theme, base, components, utilities;
 @import './theme.css' layer(theme);
+@import './view-transitions.css' layer(base);
 @import './components/slider.css' layer(components);
 @import './components/switch.css' layer(components);
 @import './components/tooltip.css' layer(components);
