Add update button to blog

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -28,6 +28,8 @@
 	--color-action-button-bg: #162238;
 	--color-action-button-hover-bg: #1a2842;
 	--color-toast-bg: #0b111c;
+	--color-download-icon-fill: #40a834;
+	--color-download-icon-hover: #1a2842;
 
 	--z-index-blog: 40;
 	--z-index-sticky: 50;
