--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,6 +7,7 @@
 @import './components/switch.css' layer(components);
 @import './components/tooltip.css' layer(components);
 @import './components/toast.css' layer(components);
+@import './components/icon-button.css' layer(components);
 
 @layer base {
 	* {
